# BudapestMetroDisplay

./: .pre-commit-config.yaml  HomeAssistant.md  README.md  repository.yaml
.github/: advanced-issue-labeler.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.yaml  bug_report.yml  (+1 more)
datasheet/: SK6812-EC20 LED Datasheet.pdf.crdownload
docker/: Dockerfile  README.md  compose.yaml
esphome/: CHANGELOG.md  README.md  device.md  metro-display-core.yaml  metro-display-update_ha.yaml  metro-display-update_ota.yaml  metro-display.factory.yaml  metro-display.yaml  metro_display.yaml  version.yaml
ha-addon/: CHANGELOG.md  DOCS.md  Dockerfile  README.md  apparmor.txt  build.yaml  config.yaml  start.sh
hardware/: CHANGELOG.md  README.md
software/: .gitignore  CHANGELOG.md  README.md  bkk_stop_ids.txt  pyproject.toml  requirements.txt
software/ha_addon/: README.md  config.yaml  start.sh
software/proxmox/ct/: BudapestMetroDisplay.sh  create_lxc.sh
software/proxmox/install/: .gitignore  budapestmetrodisplay-install.sh
software/proxmox/misc/: alpine-install.func  build.func  install.func
software/resources/: bkk_stop_ids.txt  leds.xlsx
software/resources/polylines/: h5_route.txt  h6_route.txt  h7_route.txt  h8_route.txt  m1_route.txt  m2_route.txt  m3_route.txt  m4_route.txt  poly.py
software/src/BudapestMetroDisplay/: .env.sample  .gitignore  aps_helpers.py  bkk_opendata.py  config.py  esphome.py  gui.py  led_control.py  led_helpers.py  log.py  main.py  model.py  network.py  requirements.txt  stops.py  structure.py  webserver.py
software/src/BudapestMetroDisplay/templates/: jobs.html  schedules.html
software/tests/: __init__.py  test_aps_helpers.py  test_config.py  test_led_control.py
(+38 files in other folders)
